info: updated the model training

--- a/01_notebook/noteboook.ipynb
+++ b/01_notebook/noteboook.ipynb
@@ -2354,6 +2354,16 @@
    "cell_type": "markdown",
    "id": "d16a0e44",
    "metadata": {},
+   "source": [
+    "K-Nearest Neighbors (KNN)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27482ec9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
