info: added "performance" to the models title

--- a/01_notebook/noteboook.ipynb
+++ b/01_notebook/noteboook.ipynb
@@ -2850,6 +2850,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8ef1191",
+   "metadata": {},
+   "source": [
+    "Logistic Regression Performance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "id": "ad72ccca",
@@ -2905,7 +2913,7 @@
    "id": "b80a28ec",
    "metadata": {},
    "source": [
-    "Support Vector Machine (SVM)"
+    "Support Vector Machine (SVM) Performance"
    ]
   },
   {
@@ -2965,7 +2973,7 @@
    "id": "0df3b584",
    "metadata": {},
    "source": [
-    "Decision Tree Classifier"
+    "Decision Tree Classifier Performance"
    ]
   },
   {
@@ -3024,7 +3032,7 @@
    "id": "aa432f72",
    "metadata": {},
    "source": [
-    "K-Nearest Neighbors (KNN)"
+    "K-Nearest Neighbors (KNN) Performance"
    ]
   },
   {
